tests/ui/type-alias-impl-trait/coherence/coherence.next.stderr
error[E0210]: type parameters and opaque types must be used as the argument to some local type
  --> $DIR/coherence.rs:21:38
   |
LL | impl foreign_crate::ForeignTrait for AliasOfForeignType<()> {}
   |                                      ^^^^^^^^^^^^^^^^^^^^^^ contains an uncovered type
   |
   = note: implementing a foreign trait is only possible if at least one of the types for which it is implemented is local
   = note: only traits defined in the current crate can be implemented for type parameters and opaque types

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0210`.
